--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
-</html>
-<script></script>
+<script>
+  /**
+   * Algorithm
+   * 1. create a function for plus one in array which accepts one argument as array
+   * 2. handle all edgecases (return "Enter proper value")
+   * 3. convert the array into string with join(",") method and store in variable
+   * 4. convert the string into number by number method and store in variable
+   * 5. check if converted number is NaN with isNaN method
+   * 5.1 if true return "Enter proper value"
+   * 6. add 1 in converted number
+   * 7. convert the converted number into array by split(",") method store in variable
+   * 8. return the array
+   */
+</script>
