--- a/Index.html
+++ b/Index.html
@@ -12,4 +12,21 @@
    * 7. convert the converted number into array by split(",") method store in variable
    * 8. return the array
    */
+
+  var plusOne = function (digits) {
+    if (!Array.isArray(digits)) {
+      return "Enter Proper Value";
+    }
+    for (let i = digits.length - 1; i >= 0; i--) {
+      if (digits[i] < 9) {
+        digits[i]++;
+        return digits;
+      }
+
+      digits[i] = 0;
+    }
+    digits.unshift(1);
+    return digits;
+  };
+  console.log(plusOne([9, 9]));
 </script>
